# yak-cfb-compare

./: .gitignore  Cargo.toml
docs/: Calculations.ods
src/: main.rs
yak-upstream/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
yak-upstream/.cargo/: config.toml
yak-upstream/.claude/: CLAUDE.md  settings.json
yak-upstream/.github/workflows/: ci.yml  release.yml
yak-upstream/docs/: BUILD_SUMMARY.md  DEBUG_GUIDE.md  architecture.md  developing.md  differences.md
yak-upstream/graphics/: yak_logo.af
yak-upstream/yak/: Cargo.toml
yak-upstream/yak/src/: block_layer.rs  blocks_from_files.rs  blocks_in_file.rs  encryption.rs  file_layer.rs  file_on_disk.rs  lib.rs  stream_layer.rs  streams_from_blocks.rs  streams_from_files.rs  yak.rs
yak-upstream/yak_c/: Cargo.toml  build.rs  cbindgen.toml
yak-upstream/yak_c/src/: lib.rs
yak-upstream/yak_cl/: Cargo.toml
yak-upstream/yak_cl/src/: bench.rs  cmd_dir.rs  cmd_file.rs  cmd_stream.rs  cmd_transfer.rs  error.rs  helpers.rs  main.rs
yak-upstream/yak_pytest/: conftest.py  pyproject.toml
yak-upstream/yak_pytest/tests/: test_compressed_streams.py  test_directories.py  test_directory_nametable.py  test_edge_cases.py  test_encryption.py  test_lifecycle.py  test_locking.py  test_multiblock.py  test_open_mode.py  test_reserve.py  test_single_file.py  test_stream_io.py  test_streams.py  test_thread_safety.py  test_verify.py
yak-upstream/yak_python/: Cargo.toml  README.md  pyproject.toml
yak-upstream/yak_python/src/: lib.rs
