[workspace]
members = [
    "yak",
    "yak_c",
    "yak_python",
    "yak_cl",
]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sunbeam60/yak"

[workspace.dependencies]
yak = { path = "yak", version = "0.11.0" }

[profile.profiling]
inherits = "release"
debug = true
