[package]
name = "yak"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "A modern container file library, useful for quickly building your own binary file formats. A file system in a file, focused on performance and ease of use. C and Python bindings available."
readme = "../README.md"
homepage = "https://github.com/sunbeam60/yak"
keywords = [
    "filesystem",
    "embedded",
    "storage",
    "container-files",
    "file-formats",
]
categories = ["filesystem", "data-structures"]

[dependencies]
fs2 = "0.4.3"
thread_local = "1.1"
lru = "0.16"
lz4_flex = { version = "0.12", default-features = false }
# Encryption support (L2 optional AES-XTS block encryption)
aes = "0.8"
xts-mode = "0.5"
argon2 = "0.5"
aes-kw = "0.2"
sha2 = "0.10"
rand = "0.10"
