[package]
name = "yak_c"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "C ABI wrapper for the Yak library"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
yak.workspace = true

[build-dependencies]
cbindgen = "0.29"
