[package]
name = "yak_cl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Command line tool for Yak"
homepage = "https://github.com/sunbeam60/yak"
keywords = ["filesystem", "cli", "storage", "container"]
categories = ["command-line-utilities", "filesystem"]
readme = "../README.md"

[[bin]]
name = "yak"
path = "src/main.rs"

[dependencies]
yak.workspace = true
rpassword = "5"
