[package]
name = "yak_python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Python bindings for the Yak library"

[lib]
name = "libyak"
crate-type = ["cdylib"]

[dependencies]
yak.workspace = true
pyo3 = { version = "0.28", features = ["extension-module"] }
